[package]
name = "arcjet"
version = "0.1.0"
authors = ["cryptoquick <cryptoquick@gmail.com>", "wxp9764 <wxp9764@gmail.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
dirs = "1.0"
sha2 = "0.8.0"
uuid = { version = "0.7", features = ["v4"] }
hex = "0.3.2"
